--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron bg-white ">
-    <div class="container mt-4">
+    <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <h1 class="display-4">The Best Way To Save  For The Future</h1>
