--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand pry-text" href="#">1kobo</a>
+  <a class="navbar-brand pry-text" routerLink="/">1kobo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,22 +7,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/about-us">About Us</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/about-us">About Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/contact-us">Contact Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FAQs</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/faq">FAQs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
       </li>
       <li class="nav-item">
-        <button class="btn pry-btn px-5">Register</button>
+        <a routerLinkActive="active" routerLink="/register" class="btn pry-btn px-5">Register</a>
         <!-- <a class="nav-link" href="#"></a> -->
       </li>
 
