--- a/src/app/main/about-us/about-us.component.html
+++ b/src/app/main/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div class="">
     <div class="bg-white">
-        <div class="container py-5">
+        <div class="container">
           <div class="row h-100 align-items-center py-5">
             <div class="col-lg-6">
               <h1 class="display-4">About us</h1>
@@ -15,7 +15,7 @@
         </div>
       </div>
       
-      <div class="bg-white py-5">
+      <div class="bg-white ">
         <div class="container py-5">
           <div class="row align-items-center mb-5">
             <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
@@ -38,7 +38,7 @@
         </div>
       </div>
       
-      <div class="bg-light py-5">
+      <div class="bg-light ">
         <div class="container py-5">
           <div class="row mb-4">
             <div class="col-lg-5">
