--- a/src/app/main/contact-us/contact-us.component.html
+++ b/src/app/main/contact-us/contact-us.component.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h4 class="pry-dark-text">G18 Millenium estate, Oniru, Victoria Island 101242, Lagos</h4>
+                <h4 class="pry-dark-text">18 Millenium estate, Oniru, Victoria Island 101242, Lagos</h4>
                 <h5 class="pry-dark-text my-3">Email: contact@cashboxng.com <br>Phone: +(234) 808 8888 110</h5>
                 <h6>Give us a call or drop by during work hours. We endeavour to answer all enquiries within 24 hours.</h6>
             </div>
