--- a/src/app/main/about-us/about-us.component.html
+++ b/src/app/main/about-us/about-us.component.html
@@ -16,24 +16,24 @@
       </div>
       
       <div class="bg-white ">
-        <div class="container py-5">
+        <div class="container">
           <div class="row align-items-center mb-5">
-            <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
+            <div class="col-lg-5 px-5 mx-auto order-2 order-lg-1"><img src="/assets/images/vision.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
+            <div class="col-lg-6 order-1 order-lg-2"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
               <h2 class="font-weight-light">Our Vision</h2>
               <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
-            <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="/assets/images/vision.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
           </div>
-          <div class="row align-items-center">
-            <div class="col-lg-5 px-5 mx-auto"><img src="/assets/images/mission.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-            <div class="col-lg-6">
+          <div class="row align-items-center"> 
+            <div class="col-lg-6"> 
               <h2 class="font-weight-light">Our Mission</h2>
               <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                   sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit</p> 
             </div>
+            <div class="col-lg-5 px-5 mx-auto"><img src="/assets/images/mission.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
           </div>
         </div>
       </div>
