--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
         </a>
     </div>
     <div class="text-center p-t-136">
-        <a class="txt2" href="#">
+        <a class="txt2" routerLink="/register">
             Create your Account
             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
         </a>
