--- a/src/app/auth/forgot-pwd/forgot-pwd.component.html
+++ b/src/app/auth/forgot-pwd/forgot-pwd.component.html
@@ -1,6 +1,6 @@
 <form >
     <span class="login100-form-title">
-        Account login
+        Forgot Password
     </span>
     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
         <input class="input100" type="text" name="email" placeholder="Email">
@@ -9,23 +9,16 @@
             <i class="fa fa-envelope" aria-hidden="true"></i>
         </span>
     </div>
-    <div class="wrap-input100 validate-input" data-validate="Password is required">
-        <input class="input100" type="password" name="pass" placeholder="Password">
-        <span class="focus-input100"></span>
-        <span class="symbol-input100">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-        </span>
-    </div>
     <div class="container-login100-form-btn">
         <button class="login100-form-btn pry-btn">
-            Login
+            Reset Password
         </button>
     </div>
     <div class="text-center p-t-12">
         <span class="txt1">
-            Forgot
+            Remember 
         </span>
-        <a class="txt2" routerLink="/forgot-password"> 
+        <a class="txt2" routerLink="/login">
             Email / Password?
         </a>
     </div>
