--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,19 +3,19 @@
         Register
     </span>
     <div class="wrap-input100 validate-input" >
-        <input class="input100" type="text" name="firstName" placeholder="First Name">
+        <input class="input100" type="text" name="fullName" placeholder="Full Name">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-user" aria-hidden="true"></i>
         </span>
     </div>
-    <div class="wrap-input100 validate-input" >
+    <!-- <div class="wrap-input100 validate-input" >
         <input class="input100" type="text" name="lastName" placeholder="Last Name">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-user" aria-hidden="true"></i>
         </span>
-    </div>
+    </div> -->
     <div class="wrap-input100 validate-input" >
         <input class="input100" type="text" name="email" placeholder="Email">
         <span class="focus-input100"></span>
@@ -40,13 +40,30 @@
             <i class="fa fa-eye" aria-hidden="true"></i>
         </span>
     </div>
-    <!-- <div class="wrap-input100 validate-input">
-        <input class="input100" type="confirmPwd" name="pass" placeholder="Confirm Password">
+    <div class="wrap-input100 validate-input" >
+        <input class="input100" type="text" name="refferalCode" placeholder="Referrer Code (optional)">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
-            <i class="fa fa-lock" aria-hidden="true"></i>
+            <i class="fa fa-ticket-alt" aria-hidden="true"></i>
         </span>
-    </div> -->
+    </div>
+    <div class="wrap-input100 validate-input" >
+        <div class="form-group">
+            <label class="ml-2" >
+                <small>How Did You Hear About Us? (optional)</small>
+            </label>         
+            <select class="input100 p-0 px-3 form-control" name="">
+                <option value="">Click To Select</option>
+                <option value="">Facebook</option>
+                <option value="">Twitter</option>
+            </select>
+        </div>
+        <!-- <input class="input100" type="text" name="refferalCode" placeholder="How Did You Hear About Us? (optional)"> -->
+        <!-- <span class="focus-input100"></span>
+        <span class="symbol-input100">
+            <i class="fa fa-user-cog" aria-hidden="true"></i>
+        </span> -->
+    </div>
     <div class="container-login100-form-btn"> 
         <button class="login100-form-btn pry-btn">
             Register
