--- a/src/assets/css/utilities.scss
+++ b/src/assets/css/utilities.scss
@@ -15,3 +15,13 @@
 .cursor-pointer {
     cursor: pointer;
 }
+.text-teal {
+    color: #008B8B;
+}
+.pry-dark-bg {
+    background: #006241;
+    color: white !important;
+}
+.bg-inv {
+    background: #004953;
+}
