--- a/src/app/dashboard/dash-layout/dash-layout.component.html
+++ b/src/app/dashboard/dash-layout/dash-layout.component.html
@@ -5,18 +5,18 @@
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item"> 
-              <a class="nav-link" href="#">
+              <a class="nav-link" routerLink="/dashboard">
                 <h4 class="">1Kobo </h4>
               </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="#">
+                <a class="nav-link" routerLink="/dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" >
                   <span class=" fa fa-home"></span>
                   Home <span class="sr-only">(current)</span>
                 </a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link"routerLink="/dashboard/savings" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <span class="fa fa-piggy-bank"></span>
                 Savings
               </a>
@@ -46,7 +46,7 @@
   
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-          <h1 class="h2">Hello Sodiq</h1>
+          <h1 class="h3">{{page.title}}</h1>
           <div class=" mb-2 mb-md-0">
             <div class="dropdown">
                 <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -61,116 +61,8 @@
               </div>
           </div>
         </div>  
-        <div class="row balance-row">
-            <div class="col-md-4">
-                <div class="card wallet">
-                    <div class="card-body">
-                        <h5>Wallet Balance</h5>
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <p>
-                                    <span> <i class="fa fa-wallet card-icon"></i> </span>
-                                    <span>$10,000.00</span>
-                                </p>
-                            </div>
-                            <div> <i class="fa fa-plus-circle fa-2x"></i> </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card savings">
-                    <div class="card-body">
-                        <h5>Savings Balance</h5>
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <p>
-                                    <span> <i class="fa fa-piggy-bank card-icon"></i> </span>
-                                    <span>$10,000.00</span>
-                                </p>
-                            </div>
-                            <div> <i class="fa fa-plus-circle fa-2x"></i> </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card investments">
-                    <div class="card-body">
-                        <h5>Investment Balance</h5>
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <p>
-                                    <span> <i class="fa fa-signal card-icon"></i> </span>
-                                    <span>$10,000.00</span>
-                                </p>
-                            </div>
-                            <div> <i class="fa fa-plus-circle fa-2x"></i> </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-md-8 transaction">
-                <h5>Recent Transactions</h5>
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                          <tr class="">
-                            <th colspan="1"></th>
-                            <th colspan="9"></th>
-                            <th colspan="2"></th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr *ngFor="let tran of trans">
-                            <td colspan="1" class="td-icon">
-                                <span [ngSwitch]="tran.type">
-                                    <span *ngSwitchCase="'card'" class="round-container bg-success">
-                                        <span>
-                                            <i  class="fa fa-credit-card"></i>
-                                        </span>
-                                    </span>
-                                    <span *ngSwitchCase="'savings'" class="round-container bg-info">
-                                        <span>
-                                            <i  class="fa fa-piggy-bank"></i>
-                                        </span>
-                                    </span>
-                                    <span *ngSwitchCase="'investment'" class="round-container bg-inv">
-                                        <span>
-                                            <i  class="fa fa-signal"></i>
-                                        </span>
-                                    </span>
-                                    <span *ngSwitchDefault class="round-container bg-primary">
-                                        <span>
-                                            <i  class="fa fa-history"></i>
-                                        </span>
-                                    </span>
-                                </span>
-                            </td>
-                            <td colspan="9">
-                                <p class="p-0 m-0">{{tran.desc}}</p>
-                                <b>{{tran.amount | currency}}</b>
-                            </td>
-                            <td colspan="2">
-                                <span class="text-right">
-                                    {{tran.date}}
-                                </span>
-                            </td>
-                          </tr>
-                        </tbody>
-                     </table>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h5>Refer & Earn</h5>
-                <div class="card mt-4 ">
-                    <div class="card-body">
-                        <img src="/assets/images/referral-pix.jpg" width="100%" alt="icon">
-                    </div>
-                </div>
-            </div>
+        <div>
+            <router-outlet></router-outlet>
         </div>
       </main>
 </div>
