investment page design

--- a/src/app/dashboard/dash-layout/dash-layout.component.html
+++ b/src/app/dashboard/dash-layout/dash-layout.component.html
@@ -12,29 +12,29 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" >
                   <span class=" fa fa-home"></span>
-                  Home <span class="sr-only">(current)</span>
+                  Dashboard <span class="sr-only">(current)</span>
                 </a>
               </li>
             <li class="nav-item">
-              <a class="nav-link"routerLink="/dashboard/savings" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+              <a class="nav-link" routerLink="/dashboard/savings" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <span class="fa fa-piggy-bank"></span>
                 Savings
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" routerLink="/dashboard/investments" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <span class="fa fa-signal"></span>
                 Investments
               </a>
             </li> 
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" routerLink="/dashboard/account" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                     <span class="fa fa-user"></span>
                     Account
                   </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" routerLink="/dashboard/settings" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                     <span class="fa fa-cogs"></span>
                     Settings
                   </a>
