--- a/src/app/dashboard/investments/investments.component.html
+++ b/src/app/dashboard/investments/investments.component.html
@@ -16,11 +16,11 @@
                 <div class="card bg-light">
                     <div class="card-body d-flex justify-content-between">
                         <div>
-                            <h6>Savings Balance</h6>
-                            <p>$10,000.00</p>
+                            <h6>Investment Balance</h6>
+                            <p>$20,000.00</p>
                         </div>
                         <div>
-                            <i class="fa fa-piggy-bank fa-2x text-teal"></i>
+                            <i class="fa fa-signal fa-2x text-teal"></i>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                     <div class="card-body d-flex">
                         <div class="mr-3 border-right pr-3">
                             <h6>Interest Rate</h6>
-                            <p>8% per month</p>
+                            <p>10% per month</p>
                         </div>
                         <div>
                             <div class="mr-3">
@@ -44,7 +44,7 @@
         </div>
         <div class="row mt-4">
             <div class="col-md-4">
-                <h6>Savings plan</h6>
+                <h6>Investment plan</h6>
                 <div class="card text-center shadow-sm py-4">
                     <div class="card-body">
                         <i class="fa fa-plus-circle text-teal fa-2x"></i>
@@ -57,11 +57,11 @@
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
         <div class="row" *ngIf="!showNewPlanCard">
             <div class="col-md-12">
-                <div class="card">
+                <div class="card sh">
                     <div class="card-body row">
                         <div class="col-md-8">
-                            <h6>Periodic savings plan</h6>
-                            <p>Save regularly (daily/weekly/monthly) & earn up to 8% per month. Withdraw once your savings has matured.</p>
+                            <h6>Investment plan</h6>
+                            <p>Earn up to 80% by investing in a fixed investment plan. Starts from $50,000.00</p>
                         </div>
                         <div class="col-md-4 text-right">
                             <button (click)="handleAddNewPlan()" class="btn pry-dark-bg">Add New <i class="fa fa-plus"></i></button>
@@ -75,7 +75,7 @@
         </div>
         <div *ngIf="showNewPlanCard" class="row">
             <div class="col-md-6 offset-md-3">
-                <div class="card shadow my-4">
+                <div class="card my-4 shadow">
                     <div class="card-body">
                         <form>
                             <div class="form-group">
@@ -83,27 +83,22 @@
                                 <input type="text" class="form-control">
                             </div>
                             <div class="row">
-                                <div class="form-group col-md-6">
+                                <div class="form-group col-md-12">
                                     <label>How much do you want to save?</label>
                                     <input type="number" class="form-control">
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <label>How often?</label>
-                                    <select class="form-control">
-                                        <option value="">Daily</option>
-                                        <option value="">Weekly</option>
-                                        <option value="">Monthly</option>
-                                    </select>
-                                </div>
                             </div>
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label>How long do you want to save?</label>
-                                    <input type="number" class="form-control">
+                            <div class="row mb-3">
+                                <div class="col-12">
+                                    <label>Select investment period?</label>
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <label>Start date</label>
-                                    <input type="date" class="form-control">
+                                <div class="col-4" *ngFor="let plan of invPlans">
+                                    <div class="card shadow">
+                                        <div class="card-body">
+                                            <h6><b>{{plan.period}}  months</b></h6>
+                                            <h6>{{plan.interest}}% ROI</h6>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
