account profile design page

--- a/src/app/dashboard/dash-home/dash-home.component.html
+++ b/src/app/dashboard/dash-home/dash-home.component.html
@@ -38,7 +38,7 @@
                 <div class="d-flex justify-content-between">
                     <div>
                         <p>
-                            <span> <i class="fa fa-signal card-icon"></i> </span>
+                            <span> <i class="fa fa-chart-bar card-icon"></i> </span>
                             <span>$10,000.00</span>
                         </p>
                     </div>
