--- a/src/app/dashboard/dash-layout/dash-layout.component.html
+++ b/src/app/dashboard/dash-layout/dash-layout.component.html
@@ -23,7 +23,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/dashboard/investments" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                <span class="fa fa-signal"></span>
+                <span class="fa fa-chart-line"></span>
                 Investments
               </a>
             </li> 
@@ -35,8 +35,8 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/dashboard/settings" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                    <span class="fa fa-cogs"></span>
-                    Settings
+                    <span class="fa fa-signal"></span>
+                    Transactions
                   </a>
             </li>
 
@@ -44,7 +44,7 @@
         </div>
       </nav>
   
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 dashboard">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
           <h1 class="h3">{{page.title}}</h1>
           <div class=" mb-2 mb-md-0">
