--- a/src/app/dashboard/investments/investments.component.html
+++ b/src/app/dashboard/investments/investments.component.html
@@ -20,7 +20,7 @@
                             <p>$20,000.00</p>
                         </div>
                         <div>
-                            <i class="fa fa-signal fa-2x text-teal"></i>
+                            <i class="fa fa-chart-bar fa-2x text-teal"></i>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="card-body row">
                         <div class="col-md-8">
                             <h6>Investment plan</h6>
-                            <p>Earn up to 80% by investing in a fixed investment plan. Starts from $50,000.00</p>
+                            <p>Earn up to 30% by investing in a fixed investment plan. Starts from $50,000.00</p>
                         </div>
                         <div class="col-md-4 text-right">
                             <button (click)="handleAddNewPlan()" class="btn pry-dark-bg">Add New <i class="fa fa-plus"></i></button>
@@ -70,7 +70,7 @@
                 </div>
             </div> 
             <div class="col-md-12 mt-3 text-center">  
-                <img src="/assets/images/people-saving2.png" width="400px" alt="img">
+                <img src="/assets/images/investment-bg.jpg" width="400px" alt="img">
             </div>
         </div>
         <div *ngIf="showNewPlanCard" class="row">
