--- a/src/app/shared/components/data-table/data-table.component.html
+++ b/src/app/shared/components/data-table/data-table.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive transaction">
-    <h5>Recent Transactions</h5>
+    <h5>{{title || 'Recent Transactions'}}</h5>
     <table class="table">
         <thead>
           <tr class="">
