--- a/src/app/dashboard/dash-home/dash-home.component.html
+++ b/src/app/dashboard/dash-home/dash-home.component.html
@@ -57,6 +57,31 @@
         <div class="card mt-4 ">
             <div class="card-body">
                 <img src="/assets/images/referral-pix.jpg" width="100%" alt="icon">
+                <div>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" readonly placeholder="" [value]="referralLink" >
+                        <div class="input-group-append">  
+                          <span class="input-group-text bg-white"> <i class="fa fa-copy text-info"></i> </span>
+                        </div>
+                      </div>
+                </div>
+                <div class="d-flex justify-content-between mt-3"> 
+                    <div>
+                        <i class="fab fa-whatsapp fa-2x pry-text"></i>
+                    </div>
+                    <div>
+                        <i class="fab fa-twitter fa-2x text-primary"></i>
+                    </div> 
+                    <div>
+                        <i class="fab fa-facebook fa-2x text-primary"></i>
+                    </div> 
+                    <div>
+                        <i class="fab fa-instagram fa-2x text-primary"></i>
+                    </div> 
+                    <div>
+                        <i class="fab fa-linkedin fa-2x text-primary"></i>
+                    </div> 
+                </div>
             </div>
         </div>
     </div>
