--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,13 +1,16 @@
-<form >
+<form [formGroup]="form"  >
     <span class="login100-form-title">
         Register
     </span>
     <div class="wrap-input100 validate-input" >
-        <input class="input100" type="text" name="fullName" placeholder="Full Name">
+        <input formControlName="fullName" class="input100" type="text" name="fullName" placeholder="Full Name">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-user" aria-hidden="true"></i>
         </span>
+        <div class="text-danger" *ngIf="getCtrl('fullName').touched && getCtrl('fullName').invalid">
+            <span >*full name is invalid</span>
+        </div>
     </div>
     <!-- <div class="wrap-input100 validate-input" >
         <input class="input100" type="text" name="lastName" placeholder="Last Name">
@@ -17,31 +20,31 @@
         </span>
     </div> -->
     <div class="wrap-input100 validate-input" >
-        <input class="input100" type="text" name="email" placeholder="Email">
+        <input formControlName="email" class="input100" type="text" name="email" placeholder="Email">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-envelope" aria-hidden="true"></i>
         </span>
     </div>
     <div class="wrap-input100 validate-input" >
-        <input class="input100" type="tel" name="phoneNumber" placeholder="Phone Number">
+        <input formControlName="phoneNumber" class="input100" type="tel" name="phoneNumber" placeholder="Phone Number">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-phone" aria-hidden="true"></i>
         </span>
     </div>
     <div class="wrap-input100 validate-input">
-        <input class="input100" type="password" name="pass" placeholder="Password">
+        <input formControlName="password" class="input100" [type]="showPwd ? 'text': 'password'" name="pass" placeholder="Passwordx">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-lock" aria-hidden="true"></i>
         </span>
-        <span class="symbol-input100 pwd-right-icon">
-            <i class="fa fa-eye" aria-hidden="true"></i>
+        <span  class="symbol-input100 pwd-right-icon ">
+            <i (click)="togglePwd()" class="fa fa-eye cursor-pointer" aria-hidden="true"></i>
         </span>
     </div>
     <div class="wrap-input100 validate-input" >
-        <input class="input100" type="text" name="refferalCode" placeholder="Referrer Code (optional)">
+        <input formControlName="referredBy" class="input100" type="text" name="refferalCode" placeholder="Referrer Code (optional)">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
             <i class="fa fa-ticket-alt" aria-hidden="true"></i>
@@ -52,7 +55,7 @@
             <label class="ml-2" >
                 <small>How Did You Hear About Us? (optional)</small>
             </label>         
-            <select class="input100 p-0 px-3 form-control" name="">
+            <select formControlName="infoSource" class="input100 p-0 px-3 form-control" name="">
                 <option value="">Click To Select</option>
                 <option value="">Facebook</option>
                 <option value="">Twitter</option>
@@ -65,7 +68,7 @@
         </span> -->
     </div>
     <div class="container-login100-form-btn"> 
-        <button class="login100-form-btn pry-btn">
+        <button [disabled]="form.invalid" (click)="register()" type="button" class="login100-form-btn pry-btn">
             Register
         </button>
     </div>
