--- a/src/app/auth/auth-layout/auth-layout.component.html
+++ b/src/app/auth/auth-layout/auth-layout.component.html
@@ -2,7 +2,7 @@
     <div class="container-login100">
         <div class="wrap-login100">
             <div class="w-100 text-center mb-3">
-                <a routerLink="/"><h3  class="cursor-pointer pry-dark-text ">1kobo</h3></a>
+                <a class="w-25" routerLink="/"><h3  class="cursor-pointer pry-dark-text ">1kobo</h3></a>
             </div>
             <div class="login100-pic js-tilt" data-tilt>
                 <img src="/assets/images/auth-layout.jpg" alt="IMG">
