--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,38 +1,39 @@
-<form >
-    <span class="login100-form-title">
-        Account login
-    </span>
-    <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-        <input class="input100" type="text" name="email" placeholder="Email">
-        <span class="focus-input100"></span>
-        <span class="symbol-input100">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-        </span>
+
+<form  [formGroup]="form" (ngSubmit)="login()">
+    <h4 class="text-center mb-4">Account Login</h4>
+    <div class="mb-3">
+        <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+            </div>
+            <input formControlName="email" type="email" class="form-control" placeholder="Email" >
+        </div>
+        <div *ngIf="getCtrl('email').touched && getCtrl('email').invalid" class="text-danger">
+            <span>*email is invalid</span>
+        </div>
     </div>
-    <div class="wrap-input100 validate-input" data-validate="Password is required">
-        <input class="input100" type="password" name="pass" placeholder="Password">
-        <span class="focus-input100"></span>
-        <span class="symbol-input100">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-        </span>
+
+    <div class="mb-3">
+        <div class="input-group ">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-lock"></i></span>
+            </div>
+            <input formControlName="password" [type]="showPwd ? 'text': 'password'" class="form-control" placeholder="Password">
+            <div class="input-group-append">
+              <span (click)="togglePwd()" class="input-group-text cursor-pointer"><i class="fa {{showPwd ? 'fa-eye-slash': 'fa-eye'}}"></i></span>
+            </div>
+        </div>
+        <div *ngIf="getCtrl('password').touched && getCtrl('password').invalid" class="text-danger">
+            <span>*password is invalid</span>
+        </div>
+        <!-- <p class="text-left mt-2">Forget <a routerLink="/forgot-password">email/password?</a></p> -->
     </div>
-    <div class="container-login100-form-btn">
-        <button class="login100-form-btn pry-btn">
-            Login
+    
+
+    <div class="form-group">
+        <button [disabled]="form.invalid || loading" class="btn pry-btn btn-block">
+            Login <i *ngIf="loading" class="fa fa-spinner fa-spin"></i>
         </button>
     </div>
-    <div class="text-center p-t-12">
-        <span class="txt1">
-            Forgot
-        </span>
-        <a class="txt2" routerLink="/forgot-password"> 
-            Email / Password?
-        </a>
-    </div>
-    <div class="text-center p-t-136">
-        <a class="txt2" routerLink="/register">
-            Create your Account
-            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-        </a>
-    </div>
 </form>
+<p class="text-center mt-5">New user? <a routerLink="/register">Register</a></p>
