--- a/src/app/dashboard/dash-home/dash-home.component.html
+++ b/src/app/dashboard/dash-home/dash-home.component.html
@@ -1,88 +1,93 @@
-<div class="row balance-row">
-    <div class="col-md-4">
-        <div class="card wallet">
-            <div class="card-body">
-                <h5>Wallet Balance</h5>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <p>
-                            <span> <i class="fa fa-wallet card-icon"></i> </span>
-                            <span>$10,000.00</span>
-                        </p>
-                    </div>
-                    <div> <i class="fa fa-plus-circle fa-2x"></i> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card savings">
-            <div class="card-body">
-                <h5>Savings Balance</h5>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <p>
-                            <span> <i class="fa fa-piggy-bank card-icon"></i> </span>
-                            <span>$10,000.00</span>
-                        </p>
-                    </div>
-                    <div> <i class="fa fa-plus-circle fa-2x"></i> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card investments">
-            <div class="card-body">
-                <h5>Investment Balance</h5>
-                <div class="d-flex justify-content-between">
-                    <div>
-                        <p>
-                            <span> <i class="fa fa-chart-bar card-icon"></i> </span>
-                            <span>$10,000.00</span>
-                        </p>
-                    </div>
-                    <div> <i class="fa fa-plus-circle fa-2x"></i> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row mt-5">
-    <div class="col-md-8">
-        <app-data-table [trans]="trans" ></app-data-table>
-    </div>
-    <div class="col-md-4">
-        <h5>Refer & Earn</h5>
-        <div class="card mt-4 ">
-            <div class="card-body">
-                <img src="/assets/images/referral-pix.jpg" width="100%" alt="icon">
-                <div>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" readonly placeholder="" [value]="referralLink" >
-                        <div class="input-group-append">  
-                          <span class="input-group-text bg-white"> <i class="fa fa-copy text-info"></i> </span>
+<ng-container *ngIf="balance; else loadingPage">
+    <div class="row balance-row">
+        <div class="col-md-4">
+            <div class="card wallet">
+                <div class="card-body">
+                    <h5>Wallet Balance</h5>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <p>
+                                <span> <i class="fa fa-wallet card-icon"></i> </span>
+                                <span>{{balance.wallet | currency:'NGN':'symbol-narrow'}}</span>
+                            </p>
                         </div>
-                      </div>
-                </div>
-                <div class="d-flex justify-content-between mt-3"> 
-                    <div>
-                        <i class="fab fa-whatsapp fa-2x pry-text"></i>
+                        <!-- <div> <i class="fa fa-plus-circle fa-2x"></i> </div> -->
                     </div>
-                    <div>
-                        <i class="fab fa-twitter fa-2x text-primary"></i>
-                    </div> 
-                    <div>
-                        <i class="fab fa-facebook fa-2x text-primary"></i>
-                    </div> 
-                    <div>
-                        <i class="fab fa-instagram fa-2x text-primary"></i>
-                    </div> 
-                    <div>
-                        <i class="fab fa-linkedin fa-2x text-primary"></i>
-                    </div> 
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card savings cursor-pointer" (click)="viewPage('savings', 'home')">
+                <div class="card-body">
+                    <h5>Savings Balance</h5>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <p>
+                                <span> <i class="fa fa-piggy-bank card-icon"></i> </span>
+                                <span>{{balance.savings | currency:'NGN':'symbol-narrow'}}</span>
+                            </p>
+                        </div>
+                        <div> <i (click)="viewPage('savings', 'newPlan')" class="fa fa-plus-circle fa-2x cursor-pointer"></i> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card investments cursor-pointer" (click)="viewPage('investments', 'home')">
+                <div class="card-body">
+                    <h5>Investment Balance</h5>
+                    <div class="d-flex justify-content-between">
+                        <div>
+                            <p>
+                                <span> <i class="fa fa-chart-bar card-icon"></i> </span>
+                                <span>{{balance.investments | currency:'NGN':'symbol-narrow'}}</span>
+                            </p>
+                        </div>
+                        <div> <i (click)="viewPage('investments', 'newPlan')" class="fa fa-plus-circle fa-2x cursor-pointer"></i> </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="row mt-5">
+        <div class="col-md-8">
+            <app-data-table [trans]="trans" ></app-data-table>
+        </div>
+        <div class="col-md-4">
+            <h5>Refer & Earn</h5>
+            <div class="card mt-4 ">
+                <div class="card-body">
+                    <img src="/assets/images/referral-pix.jpg" width="100%" alt="icon">
+                    <div>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" readonly placeholder="" [value]="referralLink" >
+                            <div class="input-group-append">  
+                              <span class="input-group-text bg-white"> <i class="fa fa-copy text-info"></i> </span>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="d-flex justify-content-between mt-3"> 
+                        <div>
+                            <i class="fab fa-whatsapp fa-2x pry-text"></i>
+                        </div>
+                        <div>
+                            <i class="fab fa-twitter fa-2x text-primary"></i>
+                        </div> 
+                        <div>
+                            <i class="fab fa-facebook fa-2x text-primary"></i>
+                        </div> 
+                        <div>
+                            <i class="fab fa-instagram fa-2x text-primary"></i>
+                        </div> 
+                        <div>
+                            <i class="fab fa-linkedin fa-2x text-primary"></i>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-container>
+<ng-template #loadingPage>
+    <app-loader></app-loader>
+</ng-template>
