--- a/src/app/dashboard/dash-layout/dash-layout.component.html
+++ b/src/app/dashboard/dash-layout/dash-layout.component.html
@@ -55,7 +55,7 @@
               
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <a class="dropdown-item" routerLink="/dashboard/account">Profile</a>
-                  <a class="dropdown-item" href="#">Logout</a>
+                  <a class="dropdown-item cursor-pointer" (click)="logout()">Logout</a>
                 </div>
               </div>
           </div>
