--- a/src/app/shared/components/data-table/data-table.component.html
+++ b/src/app/shared/components/data-table/data-table.component.html
@@ -17,9 +17,14 @@
                             <i  class="fa fa-credit-card"></i>
                         </span>
                     </span>
-                    <span *ngSwitchCase="'savings'" class="round-container bg-info">
+                    <span *ngSwitchCase="'fundSaving'" class="round-container bg-info">
                         <span>
                             <i  class="fa fa-piggy-bank"></i>
+                        </span>
+                    </span>
+                    <span *ngSwitchCase="'createSaving'" class="round-container bg-info">
+                        <span>
+                            <i  class="fa fa-plus"></i>
                         </span>
                     </span>
                     <span *ngSwitchCase="'investment'" class="round-container bg-inv">
