--- a/src/app/shared/components/data-table/data-table.component.scss
+++ b/src/app/shared/components/data-table/data-table.component.scss
@@ -6,7 +6,7 @@
         padding: 22px
     }
     .round-container {
-        padding: 9px;
+        padding: 9px 12px;
         border-radius: 50%;
         color: white;
         margin-top: 10px;
