--- a/src/app/dashboard/dash-home/dash-home.component.html
+++ b/src/app/dashboard/dash-home/dash-home.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-4">
             <div class="card wallet">
                 <div class="card-body">
-                    <h5>Wallet Balance</h5>
+                    <h5>Referral Comms</h5>
                     <div class="d-flex justify-content-between">
                         <div>
                             <p>
